--- a/web/app/index.html
+++ b/web/app/index.html
@@ -10,6 +10,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>Factile - Free Online Web, iPad and Mobile Survey Tool.</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
